testutils/test/generated_ingresses/location_modifier_v1_server.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: location-modifier-v1-server
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
